--- a/section/contact.html
+++ b/section/contact.html
@@ -14,75 +14,75 @@
   </head>
   <body>
     <div class="container-fluid p-0 mb-5">
-            <nav class="navbar navbar-expand-lg navbar-light bg-light p-4">
-            <a href="../index.html"><img src="../images/book.png" alt="Book"></a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav m-auto mb-2 mb-lg-0">
-                <li class="nav-item">
-                    <a class="nav-link pe-4 ps-4 active" aria-current="page" href="../index.html">Home</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link pe-4 ps-4" href="../section/bestsellers.html">Bestsellers</a>
-              </li>
-             <li class="nav-item">
-                 <a class="nav-link pe-4 ps-4" href="../section/genre.html">Genre</a>
-             </li>
-             <li class="nav-item">
-                <a class="nav-link pe-4 ps-4" href="../section/kids.html">Kids</a>
+      <nav class="navbar navbar-expand-lg navbar-light bg-light p-4">
+        <a href="../index.html"><img src="../images/book.png" alt="Book"></a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav m-auto mb-2 mb-lg-0">
+            <li class="nav-item">
+              <a class="nav-link pe-4 ps-4" aria-current="page" href="../index.html">Home</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link pe-4 ps-4" href="../section/contact.html">Contact</a>
+              <a class="nav-link pe-4 ps-4" href="../section/bestsellers.html">Bestsellers</a>
             </li>
-            </ul>
-            <form class="d-flex justify-content-end">
-                <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-                <button class="btn btn-secondary border-0" type="submit">Search</button>
-            </form>
-          </div>
-        </nav>
+            <li class="nav-item">
+              <a class="nav-link pe-4 ps-4" href="../section/genre.html">Genre</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link pe-4 ps-4" href="../section/kids.html">Kids</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link pe-4 ps-4 active" href="../section/contact.html">Contact</a>
+            </li>
+          </ul>
+          <form class="d-flex justify-content-end">
+            <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+            <button class="btn btn-secondary border-0" type="submit">Search</button>
+          </form>
+        </div>
+      </nav>
     </div>
     <div class="container contacto d-flex align-items-center flex-column">
       <p class="d-flex justify-content-center title__bestsellers anima animate__animated animate__backInLeft mb-3">You can contact us!</p>
       <div class="col-12 col-lg-8 col-md-9">
         <form>
-        <div class="mb-3 row">
-          <label for="inputName" class="col-sm-2 col-form-label">Name</label>
-          <div class="col-sm-10">
-            <input type="text" class="form-control" id="inputName">
+          <div class="mb-3 row">
+            <label for="inputName" class="col-sm-2 col-form-label">Name</label>
+            <div class="col-sm-10">
+              <input type="text" class="form-control" id="inputName">
+            </div>
           </div>
-        </div>
-        <div class="mb-3 row">
-          <label for="inputLastName" class="col-sm-2 col-form-label">Last Name</label>
-          <div class="col-sm-10">
-            <input type="text" class="form-control" id="inputLastName">
+          <div class="mb-3 row">
+            <label for="inputLastName" class="col-sm-2 col-form-label">Last Name</label>
+            <div class="col-sm-10">
+              <input type="text" class="form-control" id="inputLastName">
+            </div>
           </div>
-        </div>
-        <div class="mb-3 row">
-          <label for="exampleFormControlInput1" class="col-sm-2 col-form-label">Email</label>
-          <div class="col-sm-10">
-            <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
+          <div class="mb-3 row">
+            <label for="exampleFormControlInput1" class="col-sm-2 col-form-label">Email</label>
+            <div class="col-sm-10">
+              <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
+            </div>
           </div>
-        </div>
-        <div class="mb-3 row">
-          <label for="exampleFormControlTextarea1" class="col-sm-2 col-form-label">Message</label>
-          <div class="col-sm-10">
-            <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+          <div class="mb-3 row">
+            <label for="exampleFormControlTextarea1" class="col-sm-2 col-form-label">Message</label>
+            <div class="col-sm-10">
+              <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+            </div>
           </div>
-        </div>
-        <div class="d-flex align-items-center flex-column mb-3">
-          <p>To send the form you must accept the terms and conditions</p>
-         <div class="form-check form-switch">
-          <label class="form-check-label" for="flexSwitchCheckDefault">I agree</label>
-          <input class="form-check-input" type="checkbox" id="flexSwitchCheckDefault">
-        </div>
-        </div>
-        <div class="d-flex justify-content-center">
-         <button type="reset" class="button__reset m-2">Clean</button>
-        <button type="submit" class="button__submit m-2">Submit</button>
-        </div>
+          <div class="d-flex align-items-center flex-column mb-3">
+            <p>To send the form you must accept the terms and conditions</p>
+          <div class="form-check form-switch">
+            <label class="form-check-label" for="flexSwitchCheckDefault">I agree</label>
+            <input class="form-check-input" type="checkbox" id="flexSwitchCheckDefault">
+          </div>
+          </div>
+          <div class="d-flex justify-content-center">
+          <button type="reset" class="button__reset m-2">Clean</button>
+          <button type="submit" class="button__submit m-2">Submit</button>
+          </div>
         </form>
       </div>
     </div>
@@ -94,16 +94,16 @@
         </div>
     </div>
     <div class="container-fluid p-0 bg-light mt-5">
-            <div class="footer d-flex justify-content-between align-items-center flex-wrap p-4">
-                <img src="../images/book.png" alt="Book">
-                <p class="animate__animated animate__pulse">All rights reserved</p>
-                <div class="rrss d-flex">
-                    <div class="m-2"><a class="p-2" href="#"><img src="../images/facebook.png" alt="Facebook"></a></div>
-                    <div class="m-2"><a class="p-2" href="#"><img src="../images/instagram.png" alt="Instagram"></a></div>
-                    <div class="m-2"><a class="p-2" href="#"><img src="../images/twitter.png" alt="Twitter"></a></div>
-                </div>
-            </div>
+      <div class="footer d-flex justify-content-between align-items-center flex-wrap p-4">
+        <img src="../images/book.png" alt="Book">
+        <p class="animate__animated animate__pulse">All rights reserved</p>
+        <div class="rrss d-flex">
+          <div class="m-2"><a class="p-2" href="#"><img src="../images/facebook.png" alt="Facebook"></a></div>
+          <div class="m-2"><a class="p-2" href="#"><img src="../images/instagram.png" alt="Instagram"></a></div>
+          <div class="m-2"><a class="p-2" href="#"><img src="../images/twitter.png" alt="Twitter"></a></div>
+        </div>
+      </div>
     </div>
-     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
-    </body>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+  </body>
 </html>
