--- a/section/genre.html
+++ b/section/genre.html
@@ -14,79 +14,145 @@
   </head>
   <body>
     <div class="container-fluid p-0 mb-5">
-            <nav class="navbar navbar-expand-lg navbar-light bg-light p-4">
+        <nav class="navbar navbar-expand-lg navbar-light bg-light p-4">
             <a href="../index.html"><img src="../images/book.png" alt="Book"></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav m-auto mb-2 mb-lg-0">
+            <ul class="navbar-nav m-auto mb-2 mb-lg-0">
                 <li class="nav-item">
-                    <a class="nav-link pe-4 ps-4 active" aria-current="page" href="../index.html">Home</a>
-              </li>
-              <li class="nav-item">
+                    <a class="nav-link pe-4 ps-4" aria-current="page" href="../index.html">Home</a>
+                </li>
+                <li class="nav-item">
                 <a class="nav-link pe-4 ps-4" href="../section/bestsellers.html">Bestsellers</a>
-              </li>
-             <li class="nav-item">
-                 <a class="nav-link pe-4 ps-4" href="../section/genre.html">Genre</a>
-             </li>
-             <li class="nav-item">
-                <a class="nav-link pe-4 ps-4" href="../section/kids.html">Kids</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link pe-4 ps-4" href="../section/contact.html">Contact</a>
-            </li>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link pe-4 ps-4 active" href="../section/genre.html">Genre</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link pe-4 ps-4" href="../section/kids.html">Kids</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link pe-4 ps-4" href="../section/contact.html">Contact</a>
+                </li>
             </ul>
             <form class="d-flex justify-content-end">
                 <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
                 <button class="btn btn-secondary border-0" type="submit">Search</button>
             </form>
-          </div>
+        </div>
         </nav>
     </div>
-    <div class="container table-responsive">
-        <p class="d-flex justify-content-center title__bestsellers anima animate__animated animate__backInLeft mb-3">Genre of the best sellers</p>
-        <table class="table align-middle m-auto table__genre">
-          <thead>
-            <tr>
-                <th>Best Sellers</th>
-                <th>Genre</th>
-            </tr>
-          </thead>
-          <tbody>
-              <tr>
-                <td><img class="info__bestsellers" src="../images/thehungergames.jpg" alt="The Hunger Games"></td>
-                <td>
-                    <ul>
-                        <li>Adventure</li>
-                        <li>Science fiction</li>
-                    </ul>
-                </td>
-            </tr>
-            <tr>
-                <td><img class="info__bestsellers" src="../images/divergent.jpg" alt="Divergent"></td>
-                <td>
-                    <ul>
-                        <li>Dystopian</li>
-                        <li>Speculative Fiction</li>
-                        <li>Young Adult</li>
-                    </ul>
-                </td>
-            </tr>
-          </tbody>
-        </table>
-    </div>
-    <div class="container-fluid p-0 bg-light mt-5">
-            <div class="footer d-flex justify-content-between align-items-center flex-wrap p-4">
-                <img src="../images/book.png" alt="Book">
-                <p class="animate__animated animate__pulse">All rights reserved</p>
-                <div class="rrss d-flex">
-                    <div class="m-2"><a class="p-2" href="#"><img src="../images/facebook.png" alt="Facebook"></a></div>
-                    <div class="m-2"><a class="p-2" href="#"><img src="../images/instagram.png" alt="Instagram"></a></div>
-                    <div class="m-2"><a class="p-2" href="#"><img src="../images/twitter.png" alt="Twitter"></a></div>
+    <div class="container">
+        <p class="d-flex justify-content-center title__bestsellers anima animate__animated animate__backInLeft mb-5">What Is a Genre?</p>
+        <div>Before we dive into what genre sells the most books, let’s discuss what a genre is. A genre is just a category in which your book falls. This will be evident in the underlying theme and storyline of your book. It helps readers decide what books they would most likely enjoy.
+            Someone who loves romance books won’t want to read a book where the hero doesn’t fall in love with the man of her dreams. In the same way, someone who picks up a crime book is not going to be too happy if the book is focused on the relationship between the detective and the witness instead of actually solving the crime.
+            Now, you definitely can have different elements of multiple genres in your book.
+            So don’t think that if you picked romance, for instance, you can’t have an element of crime, mystery, or sci-fi laced throughout the book. You most certainly can! But the overarching theme and the thing that will be highlighted will be the romance. The same goes for every genre</div>
+        <div class="d-flex flex-column align-items-center">
+            <p class="d-flex justify-content-center title__bestsellers anima animate__animated animate__backInLeft mb-5 mt-5">How to Pick the Right Genre for You</p>
+            <img class="img-fluid mb-3" src="../images/genre.png" alt="Genre">
+            <div>Picking the right genre for your book might seem like a daunting task. But it doesn’t have to be.
+                When you are thinking about the genre you want to write in, you are targeting a specific audience. So, think about:</div>
+            <ul class="mt-3 mb-3">
+                <li>Who you want to reach?</li>
+                <li>What does your ideal reader look like?</li>
+                <li>What would they like to get out of the book?</li>
+            </ul>
+            <div>Once you have these answers, you can develop your book. The best way to understand what a reader wants is to read the most popular books in that genre. All genres have bestselling books. The reason is that those books gave the reader what they wanted.
+                Another great tip is just to write what you enjoy reading. You probably already have a specific genre you are drawn to or that you always find yourself picking up.
+                This is your preferred genre and will be perfect for you to write in. You are already familiar with the writing style and direction of the storyline.
+                For non-fiction books, the genres are not as broad. Here, you can write about a topic you are familiar with or passionate about. If you have a skill or idea you would like to teach people, then writing a non-fiction book is the way to go.</div>
+        </div>
+        <div>
+            <p class="d-flex justify-content-center title__bestsellers anima animate__animated animate__backInLeft mb-5 mt-5">Which Book Genre Is The Most Popular In 2021?</p>
+            <p><strong>The most popular genre of books depends on the format and situation. The bestselling book genre is romance and the most profitable fiction book genre. Religious & inspirational books are the most popular non-fiction genre, whilst thrillers are the most popular audiobooks.</strong></p>
+            <div class="mt-5">
+                <p><strong>List Of Most Popular Book Genres</strong></p>
+                <div>Before we look at book genres in detail, let’s first examine the best selling fiction books and non-fiction books. 
+                    Please note, that the publishing industry refers to the groups into which books are grouped as ‘genres’. However, if you look at Amazon you will see that these are called ‘categories’.
+                    There are some differences between the publisher’s genres and Amazon’s categories, but for this article, they have been used interchangeably. You may also find that some people group books slightly differently, but in most situations the meaning is clear.</div>
+                <div class="row mt-5">
+                    <div class="col d-flex flex-column align-items-center">
+                        <p><strong>Most Popular Fiction Genres</strong></p>
+                        <ul>
+                            <li>Fantasy.</li>
+                            <li>Science Fiction.</li>
+                            <li>Dystopian.</li>
+                            <li>Adventure.</li>
+                            <li>Romance.</li>
+                            <li>Detective & Mystery.</li>
+                            <li>Horror.</li>
+                            <li>Thriller.</li>
+                            <li>LGBTQ+.</li>
+                            <li>Historical Fiction.</li>
+                            <li>Young Adult (YA).</li>
+                            <li>Children’s Fiction.</li>
+                        </ul>
+                    </div>
+                    <div class="col d-flex flex-column align-items-center">
+                        <p><strong>Most Popular Nonfiction Genres</strong></p>
+                        <ul>
+                            <li>Memoir & Autobiography.</li>
+                            <li>Biography.</li>
+                            <li>Cooking.</li>
+                            <li>Art & Photography.</li>
+                            <li>Self-Help/Personal Development.</li>
+                            <li>Motivational/Inspirational.</li>
+                            <li>Health & Fitness.</li>
+                            <li>History.</li>
+                            <li>Crafts, Hobbies & Home.</li>
+                            <li>Families & Relationships.</li>
+                            <li>Humor & Entertainment.</li>
+                            <li>Business & Money.</li>
+                            <li>Law & Criminology.</li>
+                            <li>Politics & Social Sciences.</li>
+                            <li>Religion & Spirituality.</li>
+                            <li>Education & Teaching.</li>
+                            <li>Travel.</li>
+                            <li>True Crime.</li>
+                        </ul>
+                    </div>
+                </div>
+                <p class="mt-3"><strong>Bestselling Book Genres</strong></p>
+                <div>When you look at best selling fiction books and non fiction books on Amazon and consider the numbers of books sold, the popularity of books genre differs between paper books and ebooks. </div>
+                <div class="row mt-5">
+                    <div class="col d-flex flex-column align-items-center">
+                        <p><strong>The top five selling categories for hard copy books on Amazon are:</strong></p>
+                        <ul>
+                            <li>Memoirs and Biographies.</li>
+                            <li>Self Help.</li>
+                            <li>Religion and Spirituality.</li>
+                            <li>Health, Fitness, and Dieting.</li>
+                            <li>Politics and Social Sciences.</li>
+                        </ul>
+                    </div>
+                    <div class="col d-flex flex-column align-items-center">
+                        <p><strong>The top five selling categories for ebooks on Amazon are:</strong></p>
+                        <ul>
+                            <li>Religion and Spirituality.</li>
+                            <li>Biographies and Memoirs.</li>
+                            <li>Business and Money.</li>
+                            <li>Self Help.</li>
+                            <li>Cookbooks, food, and vine.</li>
+                        </ul>
+                    </div>
                 </div>
             </div>
+        </div>
     </div>
-     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
-    </body>
+    <div class="container-fluid p-0 bg-light mt-5">
+        <div class="footer d-flex justify-content-between align-items-center flex-wrap p-4">
+            <img src="../images/book.png" alt="Book">
+            <p class="animate__animated animate__pulse">All rights reserved</p>
+            <div class="rrss d-flex">
+                <div class="m-2"><a class="p-2" href="#"><img src="../images/facebook.png" alt="Facebook"></a></div>
+                <div class="m-2"><a class="p-2" href="#"><img src="../images/instagram.png" alt="Instagram"></a></div>
+                <div class="m-2"><a class="p-2" href="#"><img src="../images/twitter.png" alt="Twitter"></a></div>
+            </div>
+        </div>
+    </div>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+  </body>
 </html>
