--- a/section/kids.html
+++ b/section/kids.html
@@ -14,34 +14,34 @@
   </head>
   <body>
     <div class="container-fluid p-0 mb-5">
-            <nav class="navbar navbar-expand-lg navbar-light bg-light p-4">
+        <nav class="navbar navbar-expand-lg navbar-light bg-light p-4">
             <a href="../index.html"><img src="../images/book.png" alt="Book"></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav m-auto mb-2 mb-lg-0">
+            <ul class="navbar-nav m-auto mb-2 mb-lg-0">
                 <li class="nav-item">
-                    <a class="nav-link pe-4 ps-4 active" aria-current="page" href="../index.html">Home</a>
-              </li>
-              <li class="nav-item">
+                    <a class="nav-link pe-4 ps-4" aria-current="page" href="../index.html">Home</a>
+                </li>
+                <li class="nav-item">
                 <a class="nav-link pe-4 ps-4" href="../section/bestsellers.html">Bestsellers</a>
-              </li>
-             <li class="nav-item">
-                 <a class="nav-link pe-4 ps-4" href="../section/genre.html">Genre</a>
-             </li>
-             <li class="nav-item">
-                <a class="nav-link pe-4 ps-4" href="../section/kids.html">Kids</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link pe-4 ps-4" href="../section/contact.html">Contact</a>
-            </li>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link pe-4 ps-4" href="../section/genre.html">Genre</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link pe-4 ps-4 active" href="../section/kids.html">Kids</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link pe-4 ps-4" href="../section/contact.html">Contact</a>
+                </li>
             </ul>
             <form class="d-flex justify-content-end">
                 <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
                 <button class="btn btn-secondary border-0" type="submit">Search</button>
             </form>
-          </div>
+        </div>
         </nav>
     </div>
     <div class="container container__kids">
@@ -63,16 +63,16 @@
         </div>
     </div>
     <div class="container-fluid p-0 bg-light mt-5">
-            <div class="footer d-flex justify-content-between align-items-center flex-wrap p-4">
-                <img src="../images/book.png" alt="Book">
-                <p class="animate__animated animate__pulse">All rights reserved</p>
-                <div class="rrss d-flex">
-                    <div class="m-2"><a class="p-2" href="#"><img src="../images/facebook.png" alt="Facebook"></a></div>
-                    <div class="m-2"><a class="p-2" href="#"><img src="../images/instagram.png" alt="Instagram"></a></div>
-                    <div class="m-2"><a class="p-2" href="#"><img src="../images/twitter.png" alt="Twitter"></a></div>
-                </div>
+        <div class="footer d-flex justify-content-between align-items-center flex-wrap p-4">
+            <img src="../images/book.png" alt="Book">
+            <p class="animate__animated animate__pulse">All rights reserved</p>
+            <div class="rrss d-flex">
+                <div class="m-2"><a class="p-2" href="#"><img src="../images/facebook.png" alt="Facebook"></a></div>
+                <div class="m-2"><a class="p-2" href="#"><img src="../images/instagram.png" alt="Instagram"></a></div>
+                <div class="m-2"><a class="p-2" href="#"><img src="../images/twitter.png" alt="Twitter"></a></div>
             </div>
+        </div>
     </div>
      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
-    </body>
+  </body>
 </html>
